--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
         <div class="projectCard">
             <h2>EmilyA</h2>
             <p><em> Click image below to see project</em></p>
-            <a href="https://csf2223.github.io/imagegallery-emilyambrocio/"><img src="assets/sea-turtle-547162_1920.jpg"></a>
+            <a href="/EmilyA/assets/IMG_2386.JPG/"><img src="assets/IMG_2386.JPG"></a>
             <p>This project is a static website Image Gallery of Hawaii.</p>
             <p><em>Course: CS Foundations</em></p>
             <div class="projectIcons">
@@ -66,7 +66,7 @@
         <div class="projectCard">
             <h2>Student Portfolio</h2>
             <p><em> Click image below to see project</em></p>
-            <a href="https://csf2223.github.io/imagegallery-emilyambrocio/"><img src="assets/sea-turtle-547162_1920.jpg"></a>
+            <a href="https://csf2223.github.io/imagegallery-emilyambrocio/"><img src="assets/aladdin2.jpeg"></a>
             <p>This project is a static website Image Gallery of Hawaii.</p>
             <p><em>Course: CS Foundations</em></p>
             <div class="projectIcons">
@@ -85,7 +85,7 @@
         <div class="projectCard">
             <h2>My Gallery</h2>
             <p><em> Click image below to see project</em></p>
-            <a href="https://csf2223.github.io/imagegallery-emilyambrocio/"><img src="assets/sea-turtle-547162_1920.jpg"></a>
+            <a href="https://csf2223.github.io/imagegallery-emilyambrocio/"><img src="assets/christmas3.1.jpg"></a>
             <p>This project is a static website Image Gallery of Hawaii.</p>
             <p><em>Course: CS Foundations</em></p>
             <div class="projectIcons">
