troubleshooted and added AboutMe

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,8 +32,8 @@
 </nav>   <!-- close navbar class-->
 
 <section class='filler'>
-    <h1>To be completed by the students.</h1>
-    <h3>On their personal student portfolio.</h3>
+    <h1>About Me</h1>
+    <h3>HI, my name is Emily Ambrocio. I am 15 years old and I am a sophomore at Woodland Regional High School. I work at Prospect Martial Arts. Some sports I do are volleyball, dance, and track. For track, I do pole vaulting and sprint 200's. Some things I like to do during my free time are hanging out with my friends, going on my phone, and going shopping. </h3>
 </section>
 
 
